--- a/src/components/Comic/Comic.css
+++ b/src/components/Comic/Comic.css
@@ -1,3 +1,40 @@
 .comic{
-    height: 50px;
+    width: 30%;
+    font-size: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 5%;
+    background-image: url('../Card/Images/card-background.jpg');
+    box-shadow: 0 0 15px 4px rgba(0,0,0,0.4);
+    background-size: cover;
+    color: white;
+    margin: 2% 2% 2% 2%;
+    min-height: 100px;
+    height: 100%;
+   
+    
 }
+
+.comic img{
+    width: 50%;
+    height: auto;
+    margin-top: 5%;
+    margin-bottom: 5%;;
+
+}
+
+.comic h2{
+    font-size: 1.5em;
+    font-weight: 700;
+    text-align: center;
+    margin-top: 5%;
+    font-family: 'Comic Sans MS';
+}
+
+.comic p{
+    text-align: center;
+    margin-top: 5%;
+    font-family: 'Comic Sans MS';
+}
+
