--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,14 +5,18 @@ footer{
     flex-direction: column;
     font-size: 1rem;
     background-color: red;
+    justify-content: center;
+   font-family: 'Comic Sans MS';
     
 }
 
 footer p,footer h4{
     font-size: 1.1em;
     color: white;
+    margin-left: 1%;
 }
 
 footer p{
     margin-top: 5px;
+   
 }
