--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -14,5 +14,5 @@ nav{
 nav h1{
     color: white;
     font-size: 1.2em;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Comic Sans MS';
 }
