--- a/src/components/Pages/Home/Home.css
+++ b/src/components/Pages/Home/Home.css
@@ -1,3 +1,13 @@
 .home-page{
     min-height: 500px;
+    text-align: center;
+    font-size: 1rem;
+}
+
+.home-page h1{
+    font-size: 2em;
+    font-weight: 700;
+    text-decoration: underline;
+    font-family: 'Comic Sans MS';
+    margin-top: 15px;
 }
