--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,7 +4,7 @@
 
 button{
     border-radius: 20px;
-    background-color: rebeccapurple;
+    background-color: rgb(108, 13, 202);
     color: white;
     height: 40px;
    
