--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,7 +1,7 @@
 nav{
     width: 100%;
-    background-color: red;
-    height: 50px;
+    
+    height: 80px;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -10,9 +10,30 @@ nav{
 
 }
 
+nav::before{
+    content:'';
+    z-index: -1;
+    background-image: url('./Images/banner.png');
+    position: absolute;
+    width: 100%;
+    height: 80px;
+    background-position: center;
+    opacity: 0.7;
+    
+    
+}
+
 
 nav h1{
-    color: white;
-    font-size: 1.2em;
+    color: black;
+    font-size: 2em;
+    font-weight: 600;
     font-family: 'Comic Sans MS';
+    box-shadow: 0px 0px 14px 14px rgba(0, 0, 0, 0.459);
+    font-style: italic;
+    border-radius: 5px;
+    width: 20%;
+    text-align: center;
+    padding-bottom: 5px;
+    background-color: white;
 }
