--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -2,20 +2,30 @@
   width: 50%;
   text-align: center;
   margin: 40px auto;
+  
 }
 
 .search-bar input:focus{
   background-color: rgba(108, 13, 202, 0.5);
   outline: none;
+  box-shadow: none;
 }
 
 .search-bar input{
   height: 30px;
   width: 70%;
   font-family: 'Comic Sans MS';
-  border-radius: 3%;
+  border-radius: 5px;
   border: none;
   margin-right: 1%;
-  box-shadow: 0 0 15px 4px rgba(0,0,0,0.2);
+  box-shadow: 0 0 15px 4px rgba(108, 13, 202, 0.5);
+  font-size: 1rem;
  
+}
+
+
+@media only screen and (max-width:514px){
+  .search-bar input{
+    font-size: 0.9rem;
+  }
 }
