--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,16 @@ code {
 html{
   font-size: 18px;
 }
+
+@media only screen and (max-width:1255px){
+  html{
+    font-size: 16px;
+  }
+}
+
+@media only screen and (max-width:639px){
+  html{
+    font-size: 14px;
+  }
+}
+
