--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -13,12 +13,13 @@ nav{
 nav::before{
     content:'';
     z-index: -1;
-    background-image: url('./Images/banner.png');
+    background-image: url('./Images/marvelBanner1.jpg');
+    background-size:contain;
     position: absolute;
     width: 100%;
     height: 80px;
     background-position: center;
-    opacity: 0.7;
+    opacity: 0.8;
     
     
 }
