--- a/src/components/Comic/Comic.css
+++ b/src/components/Comic/Comic.css
@@ -1,4 +1,4 @@
-.comic{
+/*.comic{
     width: 30%;
     font-size: 1rem;
     display: flex;
@@ -38,3 +38,4 @@
     font-family: 'Comic Sans MS';
 }
 
+*/
