--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,18 +1,31 @@
 .card{
-    width:30%;
-    background-image: url('./Images/card-background.jpg');
-    background-size: cover;
+    width:25%;
+    
+    
     box-shadow: 0 0 15px 4px rgba(0,0,0,0.4);
     min-height: 100px;
     height: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
-    color: white;
-    
+    color: rgb(52, 0, 88);
+    position: relative;
     margin: 0 2% 2% 2%;
     border-radius: 5%;
     font-size: 1rem;
+}
+
+.card::before{
+    content:'';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -1;
+    border-radius: 5%;
+    background-image: url('./Images/card-background.jpg');
+    background-size: cover;
+    background-position:center;
+    opacity: 0.8;
 }
 
 
@@ -39,6 +52,7 @@
 
 .card p{
     font-size: 0.9em;
+    
    
     text-align: center;
     
@@ -52,3 +66,8 @@
 
 /*could use pseudo classes bur height is causing a problem*/
 
+@media only screen and (max-width:850px){
+    .card{
+        width: 35%;
+    }
+}
