--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,6 +1,7 @@
 nav{
     width: 100%;
-    
+    /*if you do position relative the before goes into that container*/
+    position: relative;
     height: 80px;
     justify-content: center;
     align-items: center;
@@ -17,12 +18,13 @@ nav::before{
     background-size:contain;
     position: absolute;
     width: 100%;
-    height: 80px;
+    height: 100%;
     background-position: center;
-    opacity: 0.8;
+    opacity: 0.9;
     
     
 }
+
 
 
 nav h1{
@@ -34,7 +36,23 @@ nav h1{
     font-style: italic;
     border-radius: 5px;
     width: 20%;
+   
     text-align: center;
     padding-bottom: 5px;
-    background-color: white;
+    background-color:white;
+
+}
+
+
+
+@media only screen and (max-width:1117px){
+    nav h1{
+        width: 30%;
+    }
+}
+
+@media only screen and (max-width:753px){
+    nav h1{
+        width: 40%;
+    }
 }
