--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   
   /*
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -29,7 +31,7 @@ html{
 
 @media only screen and (max-width:639px){
   html{
-    font-size: 14px;
+    font-size: 12px;
   }
 }
 
