extra responsiveness added

--- a/src/components/Pages/Home/Home.css
+++ b/src/components/Pages/Home/Home.css
@@ -1,5 +1,5 @@
 .home-page{
-    min-height: 500px;
+    min-height: 100vh;
     text-align: center;
     font-size: 1rem;
     width: 100%;
@@ -16,3 +16,5 @@
    
     margin: 15px auto;
 }
+
+
