--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,7 +1,6 @@
 .card{
     width:25%;
-    
-    
+    min-width: 150px;
     box-shadow: 0 0 15px 4px rgba(0,0,0,0.4);
     min-height: 100px;
     height: 100%;
@@ -12,7 +11,6 @@
     position: relative;
     margin: 0 2% 2% 2%;
     border-radius: 5%;
-    font-size: 1rem;
 }
 
 .card::before{
@@ -59,15 +57,8 @@
 }
 
 .card button{
-    margin-bottom: 10px;
-    margin-top: 10px;
+   margin-bottom: 10px;
+   margin-top: 10px;
    height: 45px;
 }
 
-/*could use pseudo classes bur height is causing a problem*/
-
-@media only screen and (max-width:850px){
-    .card{
-        width: 35%;
-    }
-}
