--- a/src/components/Pages/Home/Home.css
+++ b/src/components/Pages/Home/Home.css
@@ -1,20 +1,18 @@
 .home-page{
     min-height: 100vh;
     text-align: center;
-    font-size: 1rem;
     width: 100%;
     
 }
 
 .home-page h1{
-    font-size: 2em;
+    font-size: clamp(1.2rem,5vw,2.5rem);
     font-weight: 700;
     text-decoration: underline;
     font-family: 'Comic Sans MS';
-    
     width: 50%;
-   
     margin: 15px auto;
+    text-align: center;
 }
 
 
