--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -14,12 +14,13 @@
 .search-bar input{
   height: 30px;
   width: 70%;
+  min-width: 209px;
   font-family: 'Comic Sans MS';
   border-radius: 5px;
   border: none;
   margin-right: 1%;
   box-shadow: 0 0 15px 4px rgba(108, 13, 202, 0.5);
-  font-size: 1rem;
+  font-size: clamp(0.9rem,1.5vw,2rem);
  
 }
 
@@ -29,14 +30,3 @@
    }
 }
 
-@media only screen and (max-width:514px){
-  .search-bar input{
-    font-size: 0.9rem;
-  }
-}
-
-@media only screen and (max-width: 400px){
-  .search-bar input{
-    width: 100%;
-  }
-}
