--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -6,6 +6,7 @@ nav{
     justify-content: center;
     align-items: center;
     display: flex;
+
 }
 
 nav::before{
@@ -26,29 +27,23 @@ nav::before{
 
 nav h1{
     color: black;
-    font-size: 1.8rem;
+    font-size: 1.7rem;
     font-weight: 600;
     font-family: 'Comic Sans MS';
     box-shadow: 0px 0px 14px 14px rgba(0, 0, 0, 0.459);
     font-style: italic;
     border-radius: 5px;
-    width: 20%;
+    width: 30%;
+    min-width: 240px;
+    height: 60px;
    text-align: center;
     padding-bottom: 5px;
     background-color:white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
 }
 
 
 
-@media only screen and (max-width:1117px){
-    nav h1{
-        width: 30%;
-    }
-}
-
-@media only screen and (max-width:753px){
-    nav h1{
-        width: 40%;
-    }
-}
