--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -37,8 +37,7 @@
 
 .card h2{
     text-align: center;
-    font-size: 1.5em;
-    
+    font-size: clamp(0.7rem,3vw,1.5rem);
     font-weight: 700;
 }
 
@@ -50,10 +49,7 @@
 
 .card p{
     font-size: 0.9em;
-    
-   
     text-align: center;
-    
 }
 
 .card button{
